# pdf-web-viewer

./: .gitignore  package-lock.json  package.json  project-dir.md
.devcontainer/: devcontainer.json
backend/: pyproject.toml
backend/app/: converter.py  main.py
frontend/: package-lock.json  package.json
frontend/components/: HtmlViewer.js
frontend/lib/: api.js
frontend/pages/: index.js
frontend/styles/: globals.css
